# aurova_detections

./: .gitignore  README.md
aurova_detections/: CMakeLists.txt  package.xml
detection_msgs/: CMakeLists.txt  README.md  package.xml
detection_msgs/msg/: PositionList.msg
image_trackers_ouster/: Dockerfile  README.md
image_trackers_ouster/launch/: yolov5.launch
image_trackers_ouster/src/: tracker.py
m2track_ros/: CMakeLists.txt  Dockerfile  README.md  package.xml  requirement.txt  setup.py
m2track_ros/launch/: m2track_ros.launch
m2track_ros/src/: m2track_ros.py
m2track_ros/src/inference/: __init__.py
tracker_filter/: CMakeLists.txt  README.md  package.xml
tracker_filter/cfg/: TrackerFilter.cfg
tracker_filter/config/: params.yaml
tracker_filter/include/: ekf.h  tracker_filter_alg.h  tracker_filter_alg_node.h
tracker_filter/launch/: tracker_filter.launch
tracker_filter/src/: ekf.cpp  tracker_filter_alg.cpp  tracker_filter_alg_node.cpp
yolinov2_ros/: CMakeLists.txt  Dockerfile  README.md  detect.py  merge_channels_ouster.py  test.py  train.py  utils.py  yoliniv2.launch
yolinov2_ros/tools/: merge_channels.py
yolo_ros_ouster/: CMakeLists.txt  Dockerfile  README.md  best.pt  coco128.yaml  detect.py  merge_channels_ouster.py  readme.txt  rviz.config.rviz  tracker.launch  tracker.py  upsampling.py  yolo.py  yolov5.launch
